adding videos to readme

--- a/viz_lunar_lander.ipynb
+++ b/viz_lunar_lander.ipynb
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 100,
    "id": "07b70235",
    "metadata": {},
    "outputs": [
@@ -185,15 +185,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reached episode return of 309.9099581697705.\n"
+      "Reached episode return of 225.39169668217448.\n"
      ]
     }
    ],
    "source": [
     "# Create the RL environment to test against (same as was used for training earlier).\n",
     "env = gym.make(\"LunarLander-v3\", render_mode=\"human\", gravity=-9.81, wind_power=15.0, enable_wind=False, continuous=True)\n",
+    "env = gym.wrappers.RecordEpisodeStatistics(env)\n",
     "\n",
-    "episode_return = 0.0\n",
     "done = False\n",
     "\n",
     "# Reset the env to get the initial observation.\n",
@@ -229,10 +229,77 @@
     "    obs, reward, terminated, truncated, info = env.step(greedy_action)\n",
     "\n",
     "    # Perform env-loop bookkeeping.\n",
-    "    episode_return += reward\n",
     "    done = terminated or truncated\n",
     "\n",
-    "print(f\"Reached episode return of {episode_return}.\")\n",
+    "print(f\"Reached episode return of {info['episode']['r']}.\")\n",
+    "\n",
+    "\n",
+    "env.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "665699af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reached episode return of 230.27969635657692.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create the RL environment to test against (same as was used for training earlier).\n",
+    "env = gym.make(\"LunarLander-v3\", render_mode=\"rgb_array\", gravity=-9.81, wind_power=15.0, enable_wind=False, continuous=True)\n",
+    "env = gym.wrappers.RecordEpisodeStatistics(env)\n",
+    "env = gym.wrappers.RecordVideo(env, \n",
+    "                               video_folder=\"./video\", \n",
+    "                               name_prefix=\"ContinuousLunarLander\", \n",
+    "                               episode_trigger=lambda x: True)\n",
+    "\n",
+    "\n",
+    "\n",
+    "done = False\n",
+    "\n",
+    "# Reset the env to get the initial observation.\n",
+    "obs, info = env.reset()\n",
+    "\n",
+    "while not done:\n",
+    "    # Uncomment this line to render the env.\n",
+    "    # env.render()\n",
+    "\n",
+    "    # Compute the next action from a batch (B=1) of observations.\n",
+    "    obs_batch = torch.from_numpy(obs).unsqueeze(0)  # add batch B=1 dimension\n",
+    "    model_outputs = rl_module.forward_inference({\"obs\": obs_batch})\n",
+    "\n",
+    "    # Extract the action distribution parameters from the output and dissolve batch dim.\n",
+    "    action_dist_params = model_outputs[\"action_dist_inputs\"][0].numpy()\n",
+    "\n",
+    "    # We have continuous actions -> take the mean (max likelihood).\n",
+    "    greedy_action_0 = np.clip(\n",
+    "        action_dist_params[0],  # 0-1=mean, 2-3=log(stddev)\n",
+    "        a_min=env.action_space.low[0],\n",
+    "        a_max=env.action_space.high[0],\n",
+    "    )\n",
+    "    greedy_action_1 = np.clip(\n",
+    "        action_dist_params[1],  # 0-1=mean, 2-3=log(stddev)\n",
+    "        a_min=env.action_space.low[1],\n",
+    "        a_max=env.action_space.high[1],\n",
+    "    )\n",
+    "    greedy_action = np.array([greedy_action_0, greedy_action_1])\n",
+    "    # # For discrete actions, you should take the argmax over the logits:\n",
+    "    # greedy_action = np.argmax(action_dist_params)\n",
+    "\n",
+    "    # Send the action to the environment for the next step.\n",
+    "    obs, reward, terminated, truncated, info = env.step(greedy_action)\n",
+    "\n",
+    "    # Perform env-loop bookkeeping.\n",
+    "    done = terminated or truncated\n",
+    "\n",
+    "print(f\"Reached episode return of {info['episode']['r']}.\")\n",
     "\n",
     "\n",
     "env.close()"
